--- a/Client.xcodeproj/xcshareddata/xcschemes/FirefoxNightly.xcscheme
+++ b/Client.xcodeproj/xcshareddata/xcschemes/FirefoxNightly.xcscheme
@@ -174,6 +174,9 @@
                   Identifier = "TopSitesTests">
                </Test>
                <Test
+                  Identifier = "TopSitesTests">
+               </Test>
+               <Test
                   Identifier = "TopTabsTests">
                </Test>
                <Test
